--- a/package.json
+++ b/package.json
@@ -60,10 +60,11 @@
   "readmeFilename": "README.md",
   "main": "lib/lx-mongodb.js",
   "scripts": {
-    "test": "grunt test --force"
+    "test": "grunt test"
   },
   "devDependencies": {
     "grunt": "0.4.1",
+    "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-jshint": "git://github.com/litixsoft/grunt-contrib-jshint.git",
     "grunt-contrib-watch": "0.3.1",
     "grunt-jasmine-node": "0.0.6"
