--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-jshint": "git://github.com/litixsoft/grunt-contrib-jshint.git",
     "grunt-contrib-watch": "0.3.1",
-    "grunt-jasmine-node": "0.0.6"
+    "grunt-jasmine-node": "git://github.com/litixsoft/grunt-jasmine-node.git"
   },
   "dependencies": {
     "mongodb": "~1.2.13",
