--- a/package.json
+++ b/package.json
@@ -71,9 +71,8 @@
         "grunt-istanbul": "0.2.1"
     },
     "dependencies": {
-        "mongodb": "~1.2.13",
-        "mongojs": "~0.6.2",
-        "async": "~0.2.6",
-        "lx-valid": "0.2.1"
+        "mongodb": "~1.3.1",
+        "mongojs": "~0.7.4",
+        "async": "~0.2.8"
     }
 }
