--- a/package.json
+++ b/package.json
@@ -63,12 +63,13 @@
         "test": "grunt test"
     },
     "devDependencies": {
-        "grunt": "0.4.1",
+        "grunt": "~0.4.1",
+        "grunt-bg-shell": "~2.0.1",
         "grunt-contrib-clean": "~0.4.0",
-        "grunt-contrib-jshint": "git://github.com/litixsoft/grunt-contrib-jshint.git",
-        "grunt-contrib-watch": "0.3.1",
-        "grunt-jasmine-node": "git://github.com/litixsoft/grunt-jasmine-node.git",
-        "grunt-istanbul": "0.2.1"
+        "grunt-contrib-jshint": "~0.5.3",
+        "grunt-jasmine-node": "~0.1.0",
+        "grunt-open": "~0.2.0",
+        "istanbul": "~0.1.35"
     },
     "dependencies": {
         "mongodb": "~1.3.1",
