--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "lx-mongodb",
     "description": "Litixsoft backend driver for mongoDb.",
-    "version": "0.2.6",
+    "version": "0.3.0",
     "homepage": "https://github.com/litixsoft/lx-mongodb",
     "author": {
         "name": "Litixsoft GmbH",
@@ -72,8 +72,9 @@
         "istanbul": "~0.1.35"
     },
     "dependencies": {
+        "async": "~0.2.9",
+        "lx-helpers": "~0.2.0",
         "mongodb": "~1.3.7",
-        "mongojs": "~0.7.5",
-        "async": "~0.2.9"
+        "mongojs": "~0.7.5"
     }
 }
