--- a/package.json
+++ b/package.json
@@ -75,6 +75,6 @@
         "async": "~0.2.9",
         "lx-helpers": "~0.2.0",
         "mongodb": "~1.3.7",
-        "mongojs": "~0.7.5"
+        "mongojs": "git://github.com/litixsoft/mongojs.git"
     }
 }
