--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
         "grunt-contrib-jshint": "~0.6.4",
         "grunt-jasmine-node": "~0.1.0",
         "grunt-open": "~0.2.2",
-        "istanbul": "~0.1.44"
+        "istanbul": "~0.1.44",
+        "load-grunt-tasks": "~0.1.0"
     },
     "dependencies": {
         "async": "~0.2.9",
