--- a/package.json
+++ b/package.json
@@ -76,6 +76,6 @@
         "async": "~0.2.9",
         "lx-helpers": "~0.2.5",
         "mongodb": "~1.3.19",
-        "mongojs": "git://github.com/litixsoft/mongojs.git"
+        "mongojs": "https://github.com/litixsoft/mongojs/tarball/master"
     }
 }
