--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "lx-mongodb",
     "description": "Litixsoft backend driver for mongoDb.",
-    "version": "0.4.6",
+    "version": "0.4.7",
     "homepage": "https://github.com/litixsoft/lx-mongodb",
     "author": {
         "name": "Litixsoft GmbH",
@@ -76,6 +76,6 @@
         "async": "~0.2.9",
         "lx-helpers": "~0.2.5",
         "mongodb": "~1.3.19",
-        "mongojs": "https://github.com/litixsoft/mongojs/tarball/master"
+        "mongojs": "litixsoft/mongojs"
     }
 }
