--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "dependencies": {
         "async": "~0.2.9",
         "lx-helpers": "~0.3.0",
-        "mongodb": "~1.3.19",
+        "mongodb": "1.3.19",
         "mongojs": "litixsoft/mongojs"
     }
 }
