--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "devDependencies": {
         "grunt": "~0.4.2",
         "grunt-bg-shell": "~2.3.1",
+        "grunt-bump": "~0.0.13",
         "grunt-contrib-clean": "~0.5.0",
         "grunt-contrib-jshint": "~0.7.2",
+        "grunt-conventional-changelog": "~1.0.0",
         "grunt-jasmine-node": "~0.1.0",
         "grunt-open": "~0.2.2",
         "istanbul": "~0.2.0",
