--- a/package.json
+++ b/package.json
@@ -3,35 +3,16 @@
     "description": "Litixsoft backend driver for mongoDb.",
     "version": "0.5.2",
     "homepage": "https://github.com/litixsoft/lx-mongodb",
-    "author": {
-        "name": "Litixsoft GmbH",
-        "email": "info@litixsoft.de"
-    },
+    "author": "Litixsoft GmbH <info@litixsoft.de> (http://www.litixsoft.de)",
     "maintainers": [
-        {
-            "name": "Timo Liebetrau",
-            "email": "t.liebetrau@litixsoft.de"
-        },
-        {
-            "name": "Thomas Heinrich Linke",
-            "email": "t.heinrich-linke@litixsoft.de"
-        },
-        {
-            "name": "Marco Kannenberg",
-            "email": "m.kannenberg@litixsoft.de"
-        },
-        {
-            "name": "Andreas Krummsdorf",
-            "email": "a.krummsdorf@litixsoft.de"
-        },
-        {
-            "name": "Sven Bernstein",
-            "email": "s.bernstein@litixsoft.de"
-        },
-        {
-            "name": "Thomas Scheibe",
-            "email": "th.scheibe@litixsoft.de"
-        }
+        "Timo Liebetrau <t.liebetrau@litixsoft.de>",
+        "Marco Kannenberg <m.kannenberg@litixsoft.de@litixsoft.de>",
+        "Sven Bernstein <s.bernstein@litixsoft.de>",
+        "Dominic Sachs <d.sachs@litixsoft.de>",
+        "Thomas Scheibe <th.scheibe@litixsoft.de>",
+        "Mike Alig <m.alig@litixsoft.de>",
+        "Joerg Raschke <j.Raschke@litixsoft.de>",
+        "Andreas Krummsdorf <a.krummsdorf@litixsoft.de>"
     ],
     "repository": {
         "type": "git",
@@ -57,26 +38,28 @@
             "url": "https://github.com/litixsoft/lx-mongodb/blob/master/LICENSE"
         }
     ],
-    "readmeFilename": "README.md",
     "main": "lib/lx-mongodb.js",
+    "directories": {
+        "lib": "./lib"
+    },
     "scripts": {
         "test": "grunt test"
     },
     "devDependencies": {
-        "grunt": "~0.4.2",
+        "grunt": "~0.4.4",
         "grunt-bg-shell": "~2.3.1",
         "grunt-bump": "~0.0.13",
         "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-jshint": "~0.8.0",
-        "grunt-conventional-changelog": "~1.0.0",
-        "grunt-jasmine-node": "~0.1.0",
+        "grunt-contrib-jshint": "~0.9.2",
+        "grunt-conventional-changelog": "~1.1.0",
+        "grunt-jasmine-node": "~0.2.1",
         "grunt-open": "~0.2.3",
-        "istanbul": "~0.2.4",
-        "load-grunt-tasks": "~0.3.0"
+        "istanbul": "~0.2.6",
+        "load-grunt-tasks": "~0.4.0"
     },
     "dependencies": {
         "async": "~0.2.10",
-        "lx-helpers": "~0.4.1",
+        "lx-helpers": "~0.5.0",
         "mongodb": "1.3.19",
         "mongojs": "litixsoft/mongojs"
     }
