--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "mongodb schema",
         "mongodb json schema"
     ],
-    "license": "The MIT License (MIT)",
+    "license": "MIT",
     "licenses": [
         {
             "type": "MIT",
@@ -46,21 +46,21 @@
         "test": "grunt test"
     },
     "devDependencies": {
-        "grunt": "~0.4.4",
-        "grunt-bg-shell": "~2.3.1",
-        "grunt-bump": "~0.0.13",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-jshint": "~0.9.2",
-        "grunt-conventional-changelog": "~1.1.0",
-        "grunt-jasmine-node": "~0.2.1",
-        "grunt-open": "~0.2.3",
-        "istanbul": "~0.2.6",
-        "load-grunt-tasks": "~0.4.0"
+        "async": "^1.4.0",
+        "grunt": "^0.4.5",
+        "grunt-bg-shell": "^2.3.1",
+        "grunt-bump": "^0.3.1",
+        "grunt-contrib-clean": "^0.6.0",
+        "grunt-contrib-jshint": "^0.11.2",
+        "grunt-conventional-changelog": "^2.0.1",
+        "grunt-jasmine-node": "^0.2.1",
+        "grunt-open": "^0.2.3",
+        "istanbul": "^0.3.17",
+        "load-grunt-tasks": "^3.2.0"
     },
     "dependencies": {
-        "async": "~0.2.10",
-        "lx-helpers": "~0.5.0",
-        "mongodb": "1.3.19",
+        "lx-helpers": "0.5.1",
+        "mongodb": "1.4.38",
         "mongojs": "litixsoft/mongojs"
     }
 }
